src/docusaurus/versioned_docs/version-2.4/joining-sessions-using-a-shared-link.mdx
import OpenWithOptions from './media/openwith-options.png';
import SessionDetailsJoin from './media/sessiondetailsjoin.png'
import PortalSessionDetailsJoin from './media/portal-sessiondetailsjoin.png'
import CopyIcon from './media/copyicon.png'
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Admonition from '@theme/Admonition';
import PartialExample from './_mentored.mdx';

# Using a Shared Link to Join a Session

You can join mentoring sessions using a link shared by your contacts or on social media.

<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<Admonition type="tip">
   <p>Users who have not registered on <PartialExample mentored /> yet, should do the following actions:</p>
   <ol>
   <li>Install the application.</li>
   <li>Do one of the following actions:
      <ul>
      <li>Sign up to create a new account.</li>
      <li>Log in if you already have an account.</li>
      </ul>
   </li>
   <li>Update your profile.</li>
   <li>Enroll for sessions.</li>
   </ol>
</Admonition>
<p><b>To join a session using a shared link, do as follows:</b></p>
<ol>
<li>Tap the shared link and tap <b><PartialExample mentored /></b>. 
<p>
   <img src={OpenWithOptions} />
</p>
</li>  
<li>On the dialog displaying the information about the meeting platform, do one of the following actions:
    <ul>
    <li>If the meeting platform is BigBlueButton, tap <b>Join</b>. The BigBlueButton window appears on your web browser.</li>
    <li>If the meeting platform is Google Meet, tap <b>Join</b>. The meeting appears on the Google Meet app.</li>
    <li>If the meeting platform is WhatsApp, tap <b>Join</b>. The meeting appears on WhatsApp.</li>
    <li>If the meeting platform is Zoom, do one of the following actions:
        <ul>
        <li>Tap <b>Join</b>. The meeting appears on the Zoom app.</li>
        <li>Tap <b>Copy</b> <div class="inlineImg"><img src={CopyIcon}/></div> to copy the <b>Meeting ID</b> and <b>Password</b> and paste it on the Zoom app to join the meeting.</li>
        </ul>
    </li>
    </ul> 
<p>
   <Admonition type="note">    
   <p>If you haven't enrolled for the session yet, tap <b>Enroll</b>.</p>
   </Admonition>
</p>
<p>
   <img src={SessionDetailsJoin} />
</p>
</li>
</ol>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<Admonition type="tip">
   <p>Users who have not registered on <PartialExample mentored /> yet, should do the following actions:</p>
   <ol>
   <li>Open the web portal.</li>
   <li>Do one of the following actions:
      <ul>
      <li>Sign up to create a new account.</li>
      <li>Log in if you already have an account.</li>
      </ul>
   </li>
   <li>Update your profile.</li>
   <li>Enroll for sessions.</li>
   </ol>
</Admonition>
<p><b>To join a session using a shared link, do as follows:</b></p>
<ol>
<li>Click the shared link.</li>  
<li>On the dialog displaying the information about the meeting platform, do one of the following actions: 
    <ul>
    <li>If the meeting platform is BigBlueButton, tap <b>Join</b>. The BigBlueButton window appears on your web browser.</li>
    <li>If the meeting platform is Google Meet, tap <b>Join</b>. The meeting appears on the Google Meet app.</li>
    <li>If the meeting platform is Zoom, do one of the following actions:
        <ul>
        <li>Click <b>Join</b>. The meeting appears on the Zoom app.</li>
        <li>Click <b>Copy</b> <div class="inlineImg"><img src={CopyIcon}/></div> to copy the <b>Meeting ID</b> and <b>Password</b> and paste it on the Zoom app to join the meeting.</li>
        </ul>
    </li>
    </ul>
<p>
   <Admonition type="note">    
   <p>If you haven't enrolled for the session yet, click <b>Enroll</b>.</p>
   </Admonition>
</p>
<p>
   <img src={PortalSessionDetailsJoin} />
</p>
</li>
</ol> 
</TabItem>
</Tabs>

<Admonition type="info"> 
<ul>
<li>To know more about enrolling for a session and cancelling your enrollment, see <a href="enrolling-for-a-session">Enrolling for a Session</a>.</li>
<li>To configure the meeting settings, see any one of the following sections:
   <ul>
   <li><a href="joining-a-session">Configuring the BigBlueButton Settings</a></li>
   <li><a href="https://support.google.com/">Google Meet Support</a></li>
   <li><a href="https://www.whatsapp.com/">WhatsApp Help Center</a></li>
   <li><a href="https://zoom.us/">Zoom Support Center</a></li>
   </ul>
</li>
</ul>
</Admonition>